- Styling of beer_list.ph - Styling of beer_form.php - Whitespace fixes

--- a/admin/styles.css
+++ b/admin/styles.css
@@ -50,7 +50,8 @@
 	.xsmallbox {border: 1px solid #999; padding: 10px; width: 25px; -moz-border-radius: 3px; border-radius: 3px; margin-bottom: 5px; color: #666; background: url(img/bg_fade_sml.png) repeat-x top;}
 	.smallbox {border: 1px solid #999; padding: 10px; width: 60px; -moz-border-radius: 3px; border-radius: 3px; margin-bottom: 5px; color: #666; background: url(img/bg_fade_sml.png) repeat-x top;}
 	.mediumbox {border: 1px solid #999; padding: 10px; width: 150px; -moz-border-radius: 3px; border-radius: 3px; margin-bottom: 5px; color: #666; background: url(img/bg_fade_sml.png) repeat-x top;}
-	
+	.largebox {border: 1px solid #999; padding: 10px; width: 300px; -moz-border-radius: 3px; border-radius: 3px; margin-bottom: 5px; color: #666; background: url(img/bg_fade_sml.png) repeat-x top;}
+	.xlargebox {border: 1px solid #999; padding: 10px; width: 450px; -moz-border-radius: 3px; border-radius: 3px; margin-bottom: 5px; color: #666; background: url(img/bg_fade_sml.png) repeat-x top;}
 		
 	#welcome
 { font-family: 'Fredoka One', cursive; font-weight: 400; color: white; font-size:140% }		
